--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -65,7 +65,7 @@ div.blankSeparator2 {
 /****************************** HOME - Content Part - Logo&Menu ******************************/
 /* Header - Logo & Menu */
 #header {
-	background:#626879;
+	background:#f5f5f5;
 	margin-top:0px;
 	border-bottom:1px solid #6d8696;
 }
@@ -155,7 +155,7 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul {
 	text-decoration:none;
 	text-transform:uppercase;
 	font-weight:600;
-	color: #f5f5f5;
+	color: #727888;
 }
 li a#visited {
 	background: rgba(215, 234, 238, 0.3);
@@ -176,7 +176,6 @@ li a#visited {
 	text-decoration:none;
 	color:#fff;
 	background:#727888;
-	color: #fff;
 	border: 0;
 	padding:15px;
 	font-weight: normal;
@@ -1329,3 +1328,16 @@ width: 100%;
 margin-top: 13px;
 }
 }
+/* Headline Text */
+
+#divHeaderLine1 {display:inline-block !important}
+
+#divHeaderLine2 {display:inline-block !important}
+
+#divHeaderLine3 {display:inline-block !important}
+
+#divHeaderLine1{font-family: 'Terminal Dosis Light'; font-size: 61px; line-height: 74px; margin-top: 16px; text-transform: none; color: rgb(47, 47, 47); letter-spacing: 1px;}
+
+#divHeaderLine2{font-family: 'Terminal Dosis Light'; font-size: 31px; line-height: 41px; margin-top: 11px; color: rgb(148, 148, 148); letter-spacing: 1px; text-shadow: rgba(255, 255, 255, 0.6) 1px 1px 1px;}
+
+#divHeaderLine3{margin-top: 37px; line-height: 21px; }
