--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1336,8 +1336,26 @@ margin-top: 13px;
 
 #divHeaderLine3 {display:inline-block !important}
 
-#divHeaderLine1{font-family: 'Terminal Dosis Light'; font-size: 61px; line-height: 74px; margin-top: 16px; text-transform: none; color: rgb(47, 47, 47); letter-spacing: 1px;}
+#divHeaderLine1{
+     font-family: 'Terminal Dosis Light'; font-size: 61px; line-height: 74px; margin-top: 16px; text-transform: none; color: rgb(47, 47, 47); letter-spacing: 1px;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-style: normal;
+    font-size: 61px;
+    line-height: 78px;
+    padding-bottom: 30px;
+    color: #843534;
+}
 
-#divHeaderLine2{font-family: 'Terminal Dosis Light'; font-size: 31px; line-height: 41px; margin-top: 11px; color: rgb(148, 148, 148); letter-spacing: 1px; text-shadow: rgba(255, 255, 255, 0.6) 1px 1px 1px;}
+#divHeaderLine2{
+    font-family: 'Lato';
+    font-size: 31px;
+    line-height: 41px;
+    margin-top: 11px;
+    color: rgb(148, 148, 148);
+    letter-spacing: 1px;
+    text-shadow: rgba(255, 255, 255, 0.6) 1px 1px 1px;
+
+}
 
 #divHeaderLine3{margin-top: 37px; line-height: 21px; }
