maintaining good look and feel

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -255,6 +255,7 @@ span.home {
 	display: block;
 	clear: both;
 	visibility: hidden;
+
 	line-height: 0;
 	height: 0;
 }
@@ -413,7 +414,7 @@ span.green {
 }
 /****************************** HOME - Content Part - Box Three ******************************/
 .boxthree .one_third {
-	background:#e1e8ed;
+	background:rgba(225,232,237,0.3);
 	box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1), 1px -1px 0px #efefef;
 	border-bottom:3px solid transparent;
 	-webkit-transition: all 0.3s ease;
